XWIKI-12841: UI extension "org.xwiki.platform.topmenu.left" is not working correctly.
* remove a css rule which seems not usefull anymore and the results looks bad

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
@@ -10,7 +10,6 @@
   }
   .navbar-header {
     float: left;
-    min-width: percentage((1 / @grid-columns));
   }
   .navbar-brand {
     float: none;
